# tongle

./: .envrc  .gitignore  DOCKERFILE  Dockerfile  LICENSE  README.md  nixpacks.toml  pyproject.toml  requirements.txt  shell.nix  update_and_run_bot.sh
scripts/selfhost_scripts/: tongle-bot.service  update_and_restart_bot.sh
src/: Dockerfile  config.py  main.py
src/cogs/: cog.py  copycat.py  housekeeping.py  session_commands.py  session_manager.py  sessions_manager.py  settings.py  translator.py
src/models/: session.py  sessionportal.py  user.py
src/tools/: conversions.py  session_tools.py
