[tool.poetry]
name = "tongle"
version = "0.1.0"
description = "A translation discord bot."
authors = ["Nathan Solis <66754842+colderinit@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
deep-translator = "^1.8.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
